podeseno rutiranje i dodat tab

--- a/src/app/places/offer/offer.page.html
+++ b/src/app/places/offer/offer.page.html
@@ -1,13 +1,9 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>offer</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">offer</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <h1>Offers</h1>
 </ion-content>
