--- a/src/app/places/places.page.html
+++ b/src/app/places/places.page.html
@@ -1,10 +1,10 @@
-<ion-header [translucent]="true">
+<ion-header collapse="condense">
   <ion-toolbar>
     <ion-title>Places</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
   <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="discover">
