dodat side menu, dodato da moze da se doda nova ponuda i edit

--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -7,7 +7,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <p></p>
-  <h1> place detaill </h1>
+<ion-content [fullscreen]="true" class="ion-padding">
+  <ion-button color="primary" (click)="onBookPlace()">Book</ion-button>
 </ion-content>
