--- a/src/app/places/offer/offer-bookings/offer-bookings.page.html
+++ b/src/app/places/offer/offer-bookings/offer-bookings.page.html
@@ -1,13 +1,12 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>offer-bookings</ion-title>
+    <ion-buttons>
+      <ion-back-button defaultHref="/places/tabs/offer"></ion-back-button>
+    </ion-buttons>
+    <ion-title>{{place.title}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">offer-bookings</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-button class="ion-margin" color="primary" [routerLink]="['/', 'places', 'tabs', 'offer', 'edit', place.id]">Edit</ion-button>
 </ion-content>
