--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,13 +1,9 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>auth</ion-title>
+    <ion-title>Authentication</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">auth</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-button color="primary" (click)="onLogin()">Login</ion-button>
 </ion-content>
