--- a/src/app/places/offer/edit-offer/edit-offer.page.html
+++ b/src/app/places/offer/edit-offer/edit-offer.page.html
@@ -1,13 +1,12 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/places/tabs/offer"></ion-back-button>
+    </ion-buttons>
     <ion-title>Edit offer</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">edit-offer</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-label>Editing item</ion-label>
 </ion-content>
