--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,9 +1,40 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Authentication</ion-title>
+    <ion-title>{{isLogin ? 'Login' : 'Signup'}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-button color="primary" (click)="onLogin()">Login</ion-button>
+  <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <ion-grid>
+      <ion-row>
+        <ion-col sizeSm="6" offsetSm="3">
+          <ion-list>
+            <ion-item>
+              <ion-input label="Email" type="email" labelPlacement="floating" ngModel name="email" required email #emailCtrl="ngModel"></ion-input>
+            </ion-item>
+            <ion-item *ngIf="!emailCtrl.valid && emailCtrl.touched" lines="none">
+              <ion-label color="danger">Email is invalid</ion-label>
+            </ion-item>
+            <ion-item>
+              <ion-input label="Password" type="password" labelPlacement="floating" ngModel name="password" minlength="6" #pwCtrl="ngModel"></ion-input>
+            </ion-item>
+            <ion-item *ngIf="!pwCtrl.valid && pwCtrl.touched" lines="none">
+              <ion-label color="danger">Minimum length is 6</ion-label>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col sizeSm="6" offsetSm="3">
+          <ion-button type="button" 
+          color="primary" fill="clear" 
+          expand="block" (click)="onSwitchAuthMode()">Switch to {{isLogin ? 'Signup' : 'Login'}}</ion-button>
+          <ion-button type="submit" color="primary" (click)="onLogin()" expand="block"
+          [disabled]="f.invalid">Login</ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
+
 </ion-content>
