--- a/src/app/places/offer/new-offer/new-offer.page.html
+++ b/src/app/places/offer/new-offer/new-offer.page.html
@@ -4,9 +4,95 @@
       <ion-back-button defaultHref="/places/tabs/offers"></ion-back-button>
     </ion-buttons>
     <ion-title>New offer</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button (click)="onCreateOffer()" [disabled]="!form.valid">
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <h2>create new offer</h2>
+  <form [formGroup]="form">
+    <ion-grid>
+      <ion-row>
+      <ion-col sizeSm="6" offsetSm="3">
+        <ion-item>
+          <ion-input label="Title" autocomplete="on" 
+          autocorrect="on" labelPlacement="floating" formControlName="title"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="!form.get('title').valid && form.get('title').touched">
+      <ion-col>
+        <ion-label color="danger">Title is required</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col sizeSm="6" offsetSm="3">
+        <ion-item>
+          <ion-textarea formControlName="description" label="Short description" labelPlacement="floating" rows="3"></ion-textarea>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="!form.get('description').valid && form.get('description').touched">
+      <ion-col>
+        <ion-label color="danger">Description must be between 1 and 150 characters</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col sizeSm="6" offsetSm="3">
+        <ion-item>
+          <ion-input formControlName="price" label="Price" type="number" labelPlacement="floating"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row *ngIf="!form.get('price').valid && form.get('price').touched">
+      <ion-col>
+        <ion-label color="danger">Price is required</ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col>
+          <ion-item lines="inset">
+            <ion-label>Available from</ion-label>
+            <ion-datetime-button datetime="dateFrom"></ion-datetime-button>
+            <ion-modal [keepContentsMounted]="true">
+              <ng-template>
+                <ion-datetime formControlName="dateFrom" id="dateFrom" presentation="date" #dateFrom
+                  [value]="dateSelected"
+                  [formatOptions]="{
+                            date: {
+                              year: 'numeric',
+                              month: '2-digit',
+                              day: '2-digit',
+                            }
+                          }">
+                </ion-datetime>
+              </ng-template>
+            </ion-modal>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item lines="inset">
+            <ion-label>Available to</ion-label>
+            <ion-datetime-button datetime="dateTo"></ion-datetime-button>
+            <ion-modal [keepContentsMounted]="true">
+              <ng-template>
+                <ion-datetime formControlName="dateTo" id="dateTo" presentation="date" #dateTo [value]="dateSelected" [formatOptions]="{
+                                          date: {
+                                            year: 'numeric',
+                                            month: '2-digit',
+                                            day: '2-digit',
+                                          }
+                      }"></ion-datetime>
+              </ng-template>
+            </ion-modal>
+          </ion-item>
+        </ion-col>
+    </ion-row>
+  </ion-grid>
+  </form>
 </ion-content>
