--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -11,17 +11,19 @@
         <ion-col sizeSm="6" offsetSm="3">
           <ion-list>
             <ion-item>
-              <ion-input label="Email" type="email" labelPlacement="floating" ngModel name="email" required email #emailCtrl="ngModel"></ion-input>
+              <ion-input label="Email" type="email" labelPlacement="floating" ngModel name="email" email #emailCtrl="ngModel"
+                errorText="Invalid email"></ion-input>
             </ion-item>
-            <ion-item *ngIf="!emailCtrl.valid && emailCtrl.touched" lines="none">
+            <!-- <ion-item *ngIf="!emailCtrl.valid && emailCtrl.touched" lines="none">
               <ion-label color="danger">Email is invalid</ion-label>
-            </ion-item>
+            </ion-item> -->
             <ion-item>
-              <ion-input label="Password" type="password" labelPlacement="floating" ngModel name="password" minlength="6" #pwCtrl="ngModel"></ion-input>
+              <ion-input label="Password" type="password" labelPlacement="floating" ngModel name="password" minlength="6" #pwCtrl="ngModel"
+              errorText="Minimum length is 6 characters"></ion-input>
             </ion-item>
-            <ion-item *ngIf="!pwCtrl.valid && pwCtrl.touched" lines="none">
+            <!-- <ion-item *ngIf="!pwCtrl.valid && pwCtrl.touched" lines="none">
               <ion-label color="danger">Minimum length is 6</ion-label>
-            </ion-item>
+            </ion-item> -->
           </ion-list>
         </ion-col>
       </ion-row>
