--- a/src/app/places/discover/discover.page.html
+++ b/src/app/places/discover/discover.page.html
@@ -12,25 +12,32 @@
     <ion-segment-button value="all">All places</ion-segment-button>
     <ion-segment-button value="bookable">Bookable places</ion-segment-button>
   </ion-segment>
-  <ion-grid>
+  <ion-grid *ngIf="!relevantPlaces || relevantPlaces.length <= 0">
+    <ion-row>
+      <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+        <p>There are no bookable places right now....</p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid *ngIf="relevantPlaces.length > 0">
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
         <ion-card>
           <ion-card-header>
             <ion-card-title>
-              {{loadedPlaces?.[0]?.title}}
+              {{relevantPlaces[0].title}}
             </ion-card-title>
             <ion-card-subtitle>
-              {{loadedPlaces?.[0]?.price | currency}} / Night
+              {{relevantPlaces[0].price | currency}} / Night
             </ion-card-subtitle>
           </ion-card-header>
-          <ion-img [src]="loadedPlaces?.[0]?.imageUrl"></ion-img>
+          <ion-img [src]="relevantPlaces[0].imageUrl"></ion-img>
           <ion-card-content>
-            <p>{{loadedPlaces?.[0]?.description}}</p>
+            <p>{{relevantPlaces[0].description}}</p>
           </ion-card-content>
           <div>
             <ion-button fill="clear" color="primary"
-             [routerLink]="['/', 'places', 'tabs', 'discover', loadedPlaces?.[0]?.id]">
+             [routerLink]="['/', 'places', 'tabs', 'discover', relevantPlaces[0].id]">
              Details
             </ion-button>
           </div>
@@ -40,7 +47,7 @@
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
         <ion-list>
-          <ion-item *ngFor="let place of loadedPlaces?.slice(1)"
+          <ion-item *ngFor="let place of listedLoadedPlaces"
           [routerLink]="['/', 'places', 'tabs', 'discover', place.id]"
           detail="true">
             <ion-thumbnail slot="start">
