--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -10,7 +10,10 @@
 <ion-content [fullscreen]="true">
   <ion-grid>
     <ion-row>
-      <ion-col sizeMd="6" offsetMd="3">
+      <ion-col sizeMd="6" offsetMd="3" *ngIf="!loadedBookings || loadedBookings.length <= 0" class="ion-text-center">
+        <p>No bookings found!</p>
+      </ion-col>
+      <ion-col sizeMd="6" offsetMd="3" *ngIf="loadedBookings && loadedBookings.length >0">
         <ion-list>
           <ion-item-sliding *ngFor="let booking of loadedBookings" #slidingBookings>
             <ion-item>
