--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -24,7 +24,7 @@
         <p>{{place.price | currency}} per night</p>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <ion-row *ngIf="isBookable">
       <ion-col sizeSm="6" offsetSm="3" class="ion-text-center">
         <ion-button color="primary" (click)="onBookPlace()">Book</ion-button>
       </ion-col>
