--- a/src/app/places/offer/offer.page.html
+++ b/src/app/places/offer/offer.page.html
@@ -16,7 +16,14 @@
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-sm="8" offset-sm="2">
-        <ion-list>
+        <div *ngIf="isLoading" class="ion-text-center">
+          <ion-spinner ></ion-spinner>
+        </div>
+        <div class="ion-text-center" *ngIf="!isLoading && offers.length <= 0">
+          <p >No offers found! Create an offer.</p>
+          <ion-button color="primary" routerLink="/places/tabs/offer/new">Offer new place</ion-button>
+        </div>
+        <ion-list *ngIf="!isLoading && offers.length > 0">
           <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
             <app-offer-item [offer]="offer"></app-offer-item>
             <ion-item-options>
