--- a/src/app/places/offer/offer.page.html
+++ b/src/app/places/offer/offer.page.html
@@ -19,11 +19,11 @@
         <div *ngIf="isLoading" class="ion-text-center">
           <ion-spinner ></ion-spinner>
         </div>
-        <div class="ion-text-center" *ngIf="!isLoading && offers.length <= 0">
+        <div class="ion-text-center" *ngIf="!isLoading && offers?.length <= 0">
           <p >No offers found! Create an offer.</p>
           <ion-button color="primary" routerLink="/places/tabs/offer/new">Offer new place</ion-button>
         </div>
-        <ion-list *ngIf="!isLoading && offers.length > 0">
+        <ion-list *ngIf="!isLoading && offers?.length > 0">
           <ion-item-sliding *ngFor="let offer of offers" #slidingItem>
             <app-offer-item [offer]="offer"></app-offer-item>
             <ion-item-options>
