--- a/src/app/bookings/bookings.page.html
+++ b/src/app/bookings/bookings.page.html
@@ -10,10 +10,13 @@
 <ion-content [fullscreen]="true">
   <ion-grid>
     <ion-row>
-      <ion-col sizeMd="6" offsetMd="3" *ngIf="!loadedBookings || loadedBookings.length <= 0" class="ion-text-center">
+      <ion-col *ngIf="isLoading" sizeMd="6" offsetMd="3" class="ion-text-center">
+        <ion-spinner color="primary"></ion-spinner>
+      </ion-col>
+      <ion-col sizeMd="6" offsetMd="3" *ngIf="!isLoading && (!loadedBookings || loadedBookings.length <= 0)" class="ion-text-center">
         <p>No bookings found!</p>
       </ion-col>
-      <ion-col sizeMd="6" offsetMd="3" *ngIf="loadedBookings && loadedBookings.length >0">
+      <ion-col sizeMd="6" offsetMd="3" *ngIf="!isLoading && loadedBookings && loadedBookings.length >0">
         <ion-list>
           <ion-item-sliding *ngFor="let booking of loadedBookings" #slidingBookings>
             <ion-item>
