--- a/src/app/places/offer/new-offer/new-offer.page.html
+++ b/src/app/places/offer/new-offer/new-offer.page.html
@@ -93,6 +93,11 @@
           </ion-item>
         </ion-col>
     </ion-row>
+    <ion-row>
+      <ion-col sizeSm="6" offsetSm="3">
+        <app-location-picker></app-location-picker>
+      </ion-col>
+    </ion-row>
   </ion-grid>
   </form>
 </ion-content>
