u place model dodata lokacija koja se cuva u takodje bazi, napravljen event kada se odabere lokacija da se ona prosledi formi

--- a/src/app/places/offer/new-offer/new-offer.page.html
+++ b/src/app/places/offer/new-offer/new-offer.page.html
@@ -95,7 +95,7 @@
     </ion-row>
     <ion-row>
       <ion-col sizeSm="6" offsetSm="3">
-        <app-location-picker></app-location-picker>
+        <app-location-picker (locationPick)="onLocationPick($event)"></app-location-picker>
       </ion-col>
     </ion-row>
   </ion-grid>
