dodato da moze da se udje na mapu u detaljima

--- a/src/app/places/discover/place-detail/place-detail.page.html
+++ b/src/app/places/discover/place-detail/place-detail.page.html
@@ -34,7 +34,7 @@
     </ion-row>
     <ion-row>
       <ion-col sizeSm="6" offsetSm="3">
-        <ion-img class="location-image" [src]="place.location.mapImage"></ion-img>
+        <ion-img role="button" (click)="onShowFullMap()" class="location-image" [src]="place.location.mapImage"></ion-img>
       </ion-col>
     </ion-row>
     <ion-row *ngIf="isBookable" class="ion-padding">
