--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -11,14 +11,14 @@
         <ion-col sizeSm="6" offsetSm="3">
           <ion-list>
             <ion-item>
-              <ion-input label="Email" type="email" labelPlacement="floating" ngModel name="email" email #emailCtrl="ngModel"
+              <ion-input label="Email" required type="email" labelPlacement="floating" ngModel name="email" email #emailCtrl="ngModel"
                 errorText="Invalid email"></ion-input>
             </ion-item>
             <!-- <ion-item *ngIf="!emailCtrl.valid && emailCtrl.touched" lines="none">
               <ion-label color="danger">Email is invalid</ion-label>
             </ion-item> -->
             <ion-item>
-              <ion-input label="Password" type="password" labelPlacement="floating" ngModel name="password" minlength="6" #pwCtrl="ngModel"
+              <ion-input label="Password" required type="password" labelPlacement="floating" ngModel name="password" minlength="6" #pwCtrl="ngModel"
               errorText="Minimum length is 6 characters"></ion-input>
             </ion-item>
             <!-- <ion-item *ngIf="!pwCtrl.valid && pwCtrl.touched" lines="none">
@@ -32,8 +32,8 @@
           <ion-button type="button" 
           color="primary" fill="clear" 
           expand="block" (click)="onSwitchAuthMode()">Switch to {{isLogin ? 'Signup' : 'Login'}}</ion-button>
-          <ion-button type="submit" color="primary" (click)="onLogin()" expand="block"
-          [disabled]="f.invalid">Login</ion-button>
+          <ion-button type="submit" color="primary" expand="block"
+          [disabled]="f.invalid">{{isLogin ? 'Login' : 'Sign up'}}</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
